# fuzztools

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  derive_order.py  fmt.py  network_params.yaml  rustfmt.toml
cache/: solidity-files-cache.json
configs/: noiruzz.json  rakoon.json
eing/: Nargo.toml
eing/src/: main.nr
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
fuzztools/: Cargo.toml  README.md
fuzztools/crates/: lib.rs
fuzztools/crates/blockchain/: mod.rs
fuzztools/crates/blockchain/cl/: altair.rs  beacon_block.rs  bellatrix.rs  capella.rs  deneb.rs  electra.rs  fulu.rs  mod.rs  phase0.rs
fuzztools/crates/blockchain/cl/forks/: altair.rs  bellatrix.rs  capella.rs  deneb.rs  electra.rs  fulu.rs  mod.rs  phase0.rs
fuzztools/crates/blockchain/el/: mod.rs
fuzztools/crates/builders/: circuit.rs  mod.rs  transaction.rs
fuzztools/crates/builders/cache/: mod.rs  rpc.rs
fuzztools/crates/builders/contracts/: Makefile  access_list_target.rs  access_list_target.sol  contract.sol  mod.rs  precompile_target.rs  precompile_target.sol
fuzztools/crates/circuits/: context.rs  expressions.rs  formatter.rs  functions.rs  misc.rs  mod.rs  operators.rs  rules.rs  scope.rs  tests.rs  types.rs  utils.rs
fuzztools/crates/circuits/ast/: forest.rs  mod.rs  node.rs  nodes.rs  operators.rs  scope.rs  tests.rs  tree.rs  types.rs  utils.rs
fuzztools/crates/circuits/generators/: forest.rs  mod.rs  types.rs
fuzztools/crates/circuits/ir/: ast.rs  forest.rs  mod.rs  nodes.rs  operators.rs  types.rs
fuzztools/crates/circuits/rewriter/: mod.rs  rules.rs  tests.rs
fuzztools/crates/circuits/rewritter/: mod.rs  rules.rs
fuzztools/crates/compilers/: config.rs  expression.rs  functions.rs  globals.rs  inputs.rs  mod.rs  rules.rs  structs.rs  types.rs
fuzztools/crates/evm/: mod.rs
fuzztools/crates/math/: mod.rs
fuzztools/crates/mutations/: alloy.rs  array.rs  bool.rs  bytearray.rs  bytes.rs  consensus.rs  constants.rs  macros.rs  mod.rs  slice.rs  traits.rs  transactions.rs  uint.rs  vec.rs
fuzztools/crates/net/: mod.rs
fuzztools/crates/rpc/: error.rs  mod.rs
fuzztools/crates/transactions/: macros.rs  mod.rs  signed.rs  transaction.rs
fuzztools/crates/utils/: fast_signer.rs  mod.rs  random.rs  signer.rs
fuzztools/crates/zk/: circuit.rs  config.rs  ir.rs  mod.rs
mutable/: Cargo.toml  README.md
mutable/src/: lib.rs
nereus/: Cargo.toml  README.md
nethel/: Cargo.toml  README.md
noiruzz/: Cargo.toml  README.md
noiruzz/src/: app.rs  arithmetic.rs  base.rs  boolean.rs  circuit.rs  commands.rs  config.rs  constants.rs  lib.rs  main.rs  nodes.rs  operators.rs  rewriter.rs  scheduler.rs  traveller.rs  types.rs  utils.rs
noiruzz/src/rewriter/: mod.rs  parser.rs  rewriter.rs  rules.rs  tokenizer.rs  visitor.rs
raidan/: Cargo.toml  README.md
raidan/src/: app.rs  constants.rs  main.rs
rakoon/: Cargo.toml  README.md
rakoon/src/: app.rs  constants.rs  context.rs  main.rs
