[workspace.package]
version = "0.1.0"
authors = ["nethoxa"]
edition = "2024"
rust-version = "1.88"

[workspace]
members = [
    "rakoon",
    "fuzztools",
    "mutable", 
    "noiruzz"
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2024_incompatible_pat = "warn"
rustdoc.all = "warn"

[workspace.lints.clippy]
# Experimental lints, taken from https://github.com/paradigmxyz/reth/blob/main/Cargo.toml
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# Mature lints, taken from https://github.com/paradigmxyz/reth/blob/main/Cargo.toml
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

# Speed up compilation time for dev builds by reducing emitted debug info.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Soeed up release runtime
[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "abort"
codegen-units = 1

[workspace.dependencies]
rand = { version = "0.9.0" }
alloy = { version = "1.0.38", features = ["provider-ipc", "provider-ws", "arbitrary"] }
clap = { version = "4.5.48", features = ["derive"] }
paste = { version = "1.0" }
alloy-rlp = "0.3.12"
hex = "0.4.3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
rayon = "1.11.0"
secp256k1 = { version = "0.31.1", features = ["std", "hashes", "recovery"] }
thiserror = "2.0.17"
futures = "0.3.31"
anyhow = "1.0.100"
syn = "2.0.107"
quote = "1.0.41"
proc-macro2 = "1.0.101"
crossbeam = "0.8"
sha2 = "0.10"
tempfile = "3.20"
serde = "1.0.228"
serde_json = "1.0.145"
reqwest = "0.12.25"
petgraph = { version = "0.8.3", features = ["rayon", "generate"] }

# Noir dependencies
noirc_driver = { git = "https://github.com/noir-lang/noir.git" }
noirc_frontend = { git = "https://github.com/noir-lang/noir.git" }
nargo = { git = "https://github.com/noir-lang/noir.git" }

# Local dependencies
fuzztools = { path = "fuzztools" }
mutable = { path = "mutable" }
