[package]
name = "noiruzz-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
noiruzz = { path = "../noiruzz" }
rand = "0.9.0"
serde_json = "1.0"

[profile.release]
opt-level = 3

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
