[package]
name = "fuzztools"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy-rlp.workspace = true
alloy.workspace = true
anyhow.workspace = true
arbitrary = { version = "1.4.2", features = ["derive"] }
mutable.workspace = true
petgraph.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true

[lib]
path = "crates/lib.rs"
