[package]
name = "mutable"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mutable"
path = "src/lib.rs"
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
