[package]
name = "noiruzz"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
clap.workspace = true
fuzztools.workspace = true
rand.workspace = true
serde = "1.0.228"
serde_json = "1.0.145"
tokio.workspace = true
noirc_driver.workspace = true
noirc_frontend.workspace = true
nargo.workspace = true
md5 = "0.8.0"
rayon.workspace = true
