[package]
name = "noiruzz"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
clap.workspace = true
crossbeam.workspace = true
fuzztools.workspace = true
rand.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
noirc_driver.workspace = true
noirc_frontend.workspace = true
nargo.workspace = true
rayon.workspace = true
