[package]
name = "noiruzz"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
clap.workspace = true
crossbeam.workspace = true
fuzztools.workspace = true
petgraph.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
