[package]
name = "rakoon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
clap.workspace = true
crossbeam.workspace = true
futures.workspace = true
fuzztools.workspace = true
rand.workspace = true
rayon.workspace = true
tokio.workspace = true
tikv-jemallocator.workspace = true
reqwest = "0.12.25"
serde_json.workspace = true
