[package]
name = "rakoon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-signer-local.workspace = true
alloy.workspace = true
anyhow.workspace = true
clap.workspace = true
fuzztools.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
crossbeam.workspace = true
